Lots of updates

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,4 +1,4 @@
-<section class="cta">
-  <h3>Call To Action</h3>
-  <p>Call to action text</p>
+<section class="banner">
+  <h2>Judicial Services You Can Trust</h2>
+  <p>You are our top priority and we strive for your satisfaction.  We aim to be your one-stop service and will guide you throughout the entire process</p>
 </section>
