--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,8 +29,8 @@
   <meta name="theme-color" content="#{{ site.theme_color }}">
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
-  <link rel="stylesheet" href="{{ "/assets/css/base.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/template.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/styles.css" | relative_url }}">
 
 {% if site.rss %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
