--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,9 +5,8 @@
     {% include header.html %}
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        {% include slideshow.html %}
         {% include cta.html %}
-        {% include contact.html %}
+        {% include collection-list.html collection="services" %}
       </div>
     </main>
     {% include footer.html %}
