Some fixes and changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,10 @@
   <div class="wrapper">
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        {% include footer-contact.html %}
+        {%- include footer-about.html -%}
+      </div>
+      <div class="footer-col footer-col-2">
+        {%- include footer-contact.html -%}
       </div>
     </div>
   </div>
