Styles, organization, and other stuff

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
   <div class="wrapper">
     <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+      <div class="footer-col">
         {%- include footer-about.html -%}
       </div>
-      <div class="footer-col footer-col-2">
+      <div class="footer-col">
         {%- include footer-contact.html -%}
       </div>
     </div>
