--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article class="static-page blur">
-  <div class="post-content">
+  <section class="content">
     {{ content }}
-  </div>
+  </section>
 </article>
