--- a/_includes/collection-list.html
+++ b/_includes/collection-list.html
@@ -1,10 +1,18 @@
-{% assign collection = include.collection %}
-<section class="collection-list">
-  {% assign list = site[collection] %}
-  <h6>{{ collection }}</h6>
-  <ul>
-  {% for item in list %}
-    <li><a href="{{ item.url | relative_url }}">{{ item.name }}</a></li>
-  {% endfor %}
-  </ul>
-</section>
+{%- assign collection = include.collection -%}
+{%- assign limit = include.limit || -1 -%}
+{%- assign list = site[collection] -%}
+{%- unless page.layout == "collection-page" -%}
+<h6>{{ collection }}</h6>
+{%- endunless -%}
+<ul>
+{%- for item in list limit: limit -%}
+  <li class="collection-item">
+    <a href="{{ item.url | relative_url }}">
+      {%- if item.background -%}
+      <img src="{{ item.background | prepend: "/assets/img/" }}" />
+      {%- endif -%}
+      <span class="collection-label">{{ item.name }}</span>
+    </a>
+  </li>
+{%- endfor -%}
+</ul>
