--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,10 @@
   <meta name="disabled-adaptations" content="watch">
   {%- seo -%}
   {%- feed_meta -%}
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+  <title>{%- if page.title -%}
+    {{ page.title | escape | append: " - " }}
+    {%- endif -%}
+    {{ site.title | escape }}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
