--- a/_layouts/collection-page.html
+++ b/_layouts/collection-page.html
@@ -1,8 +1,16 @@
 ---
 layout: default
 ---
+<h1>{{ page.title }}</h1>
 <article class="static-page blur">
-  <div class="post-content">
+  {%- if content -%}
+  <section class="content">
     {{ content }}
-  </div>
+  </section>
+  {%- endif -%}
+  {%- if page.collection -%}
+  <section class="collection-list">
+    {%- include collection-list.html collection=page.collection -%}
+  </section>
+  {%- endif -%}
 </article>
