--- a/_layouts/contact-page.html
+++ b/_layouts/contact-page.html
@@ -3,7 +3,12 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <article class="static-page blur">
+  {%- if content -%}
   <section class="content">
     {{ content }}
+  </section>
+  {%- endif -%}
+  <section class="contact-form">
+    {%- include contact-form.html -%}
   </section>
 </article>
