Many style fixes

--- a/_sass/fonts.sass
+++ b/_sass/fonts.sass
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500&display=swap')
 
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap')
 
-@import url('https://fonts.googleapis.com/css2?family=Yantramanav:wght@300&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Tai+Heritage+Pro:wght@700&display=swap')
 
-$font_dm: 'DM', sans-serif
-$font_prompt: 'Prompt', sans-serif
-$font_yantramanav: 'Yantramanav', sans-serif
+$font_work: 'Work Sans', sans-serif
+$font_poppins: 'Poppins', sans-serif
+$font_tai: 'Tai Heritage Pro', serif
