--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -5,23 +5,43 @@ $img_width: calc(300px - (10px * 2))
 $overlay_color: rgba(102, 127, 255, 0.75)
 $medley_red: rgba(227, 38, 24, 1)
 $medley_black: rgba(1, 1, 1, 1)
+$lightish: #eee
 
 @import fonts
 @import breakpoints
 
+html
+  width: 100%
+  height: 100%
+  margin: 0
+
 body
+  background-color: $lightish
+  width: 100%
+  height: 100%
+  margin: 0
   display: flex
-  flex-direction: column
+  flex-flow: column nowrap
   color: $medley_black
   font-family: $font_work
 
+ul, ol
+  margin: 0
+
 header
+  position: fixed
+  .wrapper
+    max-width: calc(1280px - (30px * 2))
+  .site-nav
+    .trigger
+      display: flex
+      .page-link
+        color: white
+      .menu-link
+        padding: 0 20px
   flex-shrink: 0
   background: $medley_red
   color: white
-  .trigger
-    .page-link
-      color: white
 
 .site-header
   min-height: 70px
@@ -32,6 +52,8 @@ header
 
 main
   flex: 1 0 auto
+  .wrapper
+    max-width: calc(1024px - (30px * 2))
 
 .title-background
   min-height: 400px
@@ -59,25 +81,36 @@ main
     position: relative
     li
       list-style: none
-      img
-        max-width: $img_width
-        max-height: auto
+      a
+        display: inline-block
+        background-size: contain
+        width: 320px
+        height: 180px
       .collection-label
-        background: rgba(0, 0, 0, .5)
+        display: inline-block
+        position: relative
+        top: 33%
+        background-color: rgba(0, 0, 0, .5)
         color: white
         width: 100%
-        padding: 5px 0
+        padding: 20px 0
         text-align: center
-        top: 75%
-        left: 50%
-        -webkit-transform: translate(-50%, -50%)
-        transform: translate(-50%, -50%)
+
 .site-footer
   flex-shrink: 0
   bottom: 0
   margin: auto
   background-color: $medley_black
   color: lightgrey
+  .wrapper
+    max-width: calc(1280px - (30px * 2))
+  .footer-region-content
+    ul > li
+      list-style: none
+      img
+        width: 32px
+        height: 32px
+        filter: invert(100%)
   .footer-col-wrapper
     color: lightgrey
     display: flex
