--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,14 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      <img src="/assets/img/msi-logo.png"
+        title="{{ site.title }}"
+        alt="{{ site.title }}" />
+      <!--<span class="background-text">MSI</span>
+      <span class="main-text">{{ site.title | escape }}</span>
+      <span class="sub-text">Serving you since 2012</span>-->
+    </a>
 
   {% if page_paths %}
       <nav class="site-nav">
