--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -36,24 +36,63 @@ header
     .trigger
       display: flex
       .page-link
-        color: white
+        color: $medley_black
+        &:hover
+          color: $medley_red
       .menu-link
         padding: 0 20px
   flex-shrink: 0
-  background: $medley_red
-  color: white
+  background: $lightish
+  color: $medley_red
+  box-shadow: 5px 0 10px $medley_black
 
 .site-header
   min-height: 70px
 
 .site-title, .site-title:visited
+  display: block
   font-family: $font_poppins
-  color: white
+  text-transform: uppercase
+  color: $medley_red
+  line-height: 0.5
+  position: fixed
+  .background-text
+    position: inherit
+    font-family: $font_tai
+    font-size: 6em
+    top: 5vh
+    padding-left: 1vw
+    display: inline-block
+    -webkit-transform: scale(1.2, 1)
+    -moz-transform: scale(1.2, 1)
+    -ms-transform: scale(1.2, 1)
+    -o-transform: scale(1.2, 1)
+    transform: scale(1.2, 1)
+    background: -webkit-linear-gradient($medley_red, $medley_black)
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+  .main-text
+    position: inherit
+    background-color: $lightish
+    color: $medley_black
+    line-height: 1
+    padding: 5px
+    top: 65px
+    font-size: 70%
+    font-weight: 500
+    letter-spacing: 1px
+  .sub-text
+    position: inherit
+    background-color: $lightish
+    font-size: 60%
+    line-height: 2
+    padding: 5px
+    top: 90px
 
 main
   flex: 1 0 auto
   .wrapper
-    max-width: calc(1024px - (30px * 2))
+    max-width: calc(1024px - (15px * 2))
 
 .title-background
   min-height: 400px
