--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-      <img src="/assets/img/msi-logo.png"
+      <img src="assets/img/msi-logo.png"
         title="{{ site.title }}"
         alt="{{ site.title }}" />
       <!--<span class="background-text">MSI</span>
