--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -41,7 +41,8 @@ header
       .menu-link
         padding: 0 20px
   flex-shrink: 0
-  background: $lightish
+  background: rgb(255,255,255)
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(238,238,238,1) 25%, rgba(238,238,238,1) 100%)
   color: $medley_red
   box-shadow: 5px 0 10px $medley_black
 
